--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "hbs": "~2.7.0",
     "less-middleware": "1.0.x",
     "morgan": "~1.3.0",
+    "q": "^1.0.1",
     "serve-favicon": "~2.1.3",
-    "socket.io": "^1.1.0"
+    "socket.io": "^1.1.0",
+    "spheron": "0.0.3"
   }
 }
