--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
+    "cylon": "^0.19.1",
+    "cylon-sphero": "^0.15.0",
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "hbs": "~2.7.0",
@@ -15,7 +17,6 @@
     "morgan": "~1.3.0",
     "q": "^1.0.1",
     "serve-favicon": "~2.1.3",
-    "socket.io": "^1.1.0",
-    "spheron": "0.0.3"
+    "socket.io": "^1.1.0"
   }
 }
